# todo-agent

./: .gitignore  README.md  fix_icon.py  generate_icons.py  generate_icons.sh  index.html  package-lock.json  package.json  start.sh  tailwind.config.js  vite.config.ts
docs/: BUILD.md  DESIGN.md  PHASE4-7-SUMMARY.md  PROGRESS.md  QUICK-START.md  TROUBLESHOOTING.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: db.rs  mod.rs  notification.rs  screenshot.rs  shortcut.rs
src/components/category/: CategoryForm.tsx  CategoryIcon.tsx  CategoryList.tsx
src/components/screenshot/: ExtractPreview.tsx  ScreenshotOverlay.tsx  ScreenshotQueuePanel.tsx
src/components/settings/: SettingsPage.tsx
src/components/todo/: TodoFilters.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
src/components/trash/: TrashPage.tsx
src/components/ui/: Button.tsx  DatePicker.tsx  Input.tsx  Modal.tsx  Select.tsx  ShortcutInput.tsx  Toast.tsx  index.ts
src/hooks/: useScreenshot.ts  useShortcut.ts
src/lib/: db.ts  utils.ts
src/services/: notification.ts  openai.ts  oss.ts  s3.ts
src/stores/: categoryStore.ts  filterStore.ts  screenshotQueueStore.ts  settingsStore.ts  todoStore.ts
src/styles/: globals.css
src/types/: index.ts
